src/index.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@import "tailwindcss";

html {
  scroll-behavior: auto;
}

body{
  font-family: 'Poppins', sans-serif;
}

:root {
  --color-bg: #0b0f19;
  --color-surface: #111827;
  --color-primary: #6366f1;
  --color-secondary: #22c55e;
  --color-text: #11142D;
  --color-text-secondary: #11142DA4;
  --color-muted: #9ca3af;
  --color-button: #4DA8CCE5;
}

.primary-text{
  color: var(--color-text);
}

.secondary-text{
  color: var(--color-text-secondary);
}

.section{
  max-width: 80rem;
  margin: 0 auto;
  padding: 1.5rem 1rem;
}

.bg-btn{
  background-color: var(--color-button);
  color: white;
  font-weight: 600;
  letter-spacing: 0.4px;
  cursor: pointer;
}

.norm-btn{
  color: white;
  font-weight: 600;
  letter-spacing: 0.4px;
  cursor: pointer;
}

.letter{
  letter-spacing: 0.4px;
}

button {
  cursor: pointer;
}

@media (min-width: 640px) {
  .section {
    padding: 3rem 2rem;
  }
}

@media (min-width: 1024px) {
  .section {
    padding: 5rem;
  }
}

